<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">


    <include
        android:id="@+id/include4"
        layout="@layout/app_bar_nav"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@+id/scrollViewActivities">

        <TextView
            android:id="@+id/loadScreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/pixellari"
            android:paddingTop="200dp"
            android:gravity="center"
            android:text="Activities"
            android:textColor="@color/colorAccent"
            android:textSize="48sp" />

    </LinearLayout>


    <ScrollView
        android:id="@+id/scrollViewActivities"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="300dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonStudy"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"
                android:layout_marginBottom="25dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/pixellari"
                android:text="Study"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonSleep"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/pixellari"
                android:text="Sleep"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonEat"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="27dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/pixellari"
                android:text="Eat"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonGame"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="27dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/pixellari"
                android:text="Game"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonGroceryHaul"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="27dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/pixellari"
                android:text="Grocery Haul"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonNightOut"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="27dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/pixellari"
                android:text="Night Out"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonSuperSleep"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="139dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/pixellari"
                android:text="Super Sleep"
                android:textSize="24sp" />
        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>