<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/nameMain"
    tools:context=".presentation.NavActivity">

    <include
        android:id="@+id/include"
        layout="@layout/base_layout" />

...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include"
        app:layout_constraintVertical_bias="0.009"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

    <EditText
        android:id="@+id/gameName"
        android:layout_width="253dp"
        android:layout_height="81dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#F2EF10"
...
